force-app/main/default/objects/vlocity_cmt__QuoteAsyncOperationEvent__e/vlocity_cmt__QuoteAsyncOperationEvent__e.object-meta.xml
<CustomObject>
    <description>Requests an asynchronous operation to run on the requested quote, optionally on a specific quote item bundle.</description>
    <label>Quote Asynchronous Operation Event</label>
    <pluralLabel>Quote Asynchronous Operation Events</pluralLabel>
</CustomObject>