force-app/main/default/objects/vlocity_cmt__QuoteAsyncOperationEvent__e/fields/vlocity_cmt__AsyncOperation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AsyncOperation__c</fullName>
    <description>The type of asynchronous operation requested.</description>
    <label>Async Operation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>