force-app/main/default/objects/vlocity_cmt__QuoteAsyncOperationEvent__e/fields/vlocity_cmt__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteId__c</fullName>
    <description>Id of the quote on which the asynchronous operation needs to occur (required).</description>
    <label>Quote</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>