force-app/main/default/objects/vlocity_cmt__QuoteAsyncOperationEvent__e/fields/vlocity_cmt__QuoteItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteItemId__c</fullName>
    <description>Id of the quote item on which the asynchronous operation needs to occur (when relevant).</description>
    <label>Quote Line Item</label>
    <length>18</length>
    <type>Text</type>
</CustomField>